# spectral-init

./: .gitignore  .gitleaks.toml  CLAUDE.md  Cargo.toml  LICENSE  README.md
.autoskillit/: config.yaml
.autoskillit/recipes/: research.yaml
.autoskillit/recipes/diagrams/: research.md
.autoskillit/temp/run-experiment/: results_ci_test_optimization_2026-03-26_015349.md  results_lobpcg_warm_restart_2026-03-23_042213.md  results_rsvd_oversampling_coverage_2026-03-26_220910.md  results_simd-spmv-isa-baseline_2026-03-27_120000.md
.claude/skills/implement-experiment/: SKILL.md
.claude/skills/plan-experiment/: SKILL.md
.claude/skills/run-experiment/: SKILL.md
.claude/skills/scope/: SKILL.md
.claude/skills/write-report/: SKILL.md
.config/: nextest.toml
.github/workflows/: slow-tests.yml  test.yml
benches/: README.md  simd_spmv_exp.rs  spectral_bench.rs
docs/: merfish-umap-benchmark-plan.md  umap-spectral-initialization-rust-implementation-report.md
docs/metrics/: README.md  cluster-preservation.md  global-structure.md  spatial-correlation.md  structure-preservation.md
research/2026-03-22-lobpcg-warm-restart-benefit/: experiment-plan.md  report.md
research/2026-03-22-lobpcg-warm-restart-benefit/results/: metrics.md  raw.txt
research/2026-03-22-lobpcg-warm-restart-benefit/scripts/: collect_results.sh  run_experiment.sh
research/2026-03-25-ci-test-optimization/: report.md
research/2026-03-25-ci-test-optimization/results/: speedup_comparison.csv
research/2026-03-25-ci-test-optimization/scripts/: extract_timings.py  inject_bug.sh  run_bug_matrix.sh  run_min_set.sh  run_opt_sweep.sh  run_property_tests.sh  summarize_results.py
research/2026-03-26-rsvd-oversampling-coverage/: report.md
research/2026-03-26-rsvd-oversampling-coverage/results/: rq1_oversampling_sweep.csv  rq1_quick_scan.csv  rq2_mutation_matrix.csv
research/2026-03-26-rsvd-oversampling-coverage/scripts/: analyze.py  run_dry_run_verify.sh  run_rq1_nbiter_check.sh  run_rq1_sweep.sh  run_rq2_mutations.sh
research/2026-03-27-avx512-gather-zen5-spmv/: report.md
research/2026-03-27-avx512-gather-zen5-spmv/results/: criterion_avx2.txt  criterion_avx512_only.txt  env.txt  speedup_table.md  turbostat_avx512.txt
research/2026-03-27-avx512-gather-zen5-spmv/scripts/: analyze_results.py  isa_report.sh  run_benchmarks.sh  run_with_turbostat.sh
research/2026-03-27-computemode-simd-spmv-parity/: report.md
research/2026-03-27-computemode-simd-spmv-parity/results/: rust_test_output.txt  scipy_backend.json  solver_divergence.json  spectral_gaps.json  spmv_divergence.json  subspace_angles.json
research/2026-03-27-computemode-simd-spmv-parity/scripts/: analyze_subspace.py  collect_rq4.py  run_experiment.sh
research/2026-03-27-simd-spmv-isa-baseline/: report.md
research/2026-03-27-simd-spmv-isa-baseline/results/: asm_opt3.txt  asm_spmv_csr.txt  criterion_avx2.txt  criterion_baseline.txt  criterion_sell_c.txt  env.txt  remarks_opt2.txt  remarks_opt3.txt  speedup_table.md  timing_breakdown.txt  vectorize_remarks.txt
research/2026-03-27-simd-spmv-isa-baseline/scripts/: analyze_results.py  asm_audit.sh  run_benchmarks.sh
research/2026-03-28-rsvd-nbiter-rustnative/: report.md
research/2026-03-28-rsvd-nbiter-rustnative/results/: direction_a_2il_vs_direct.csv  direction_b_sweep.csv  direction_c_subspace.csv  dry_run.csv
research/2026-03-28-rsvd-nbiter-rustnative/scripts/: run_direction_a.sh  run_direction_b.sh  run_direction_c.sh  run_dry_run.sh
research/2026-03-28-simd-lobpcg-near-degenerate/: report.md
research/2026-03-28-simd-lobpcg-near-degenerate/results/: discrete_gaps.json  gap_sweep.json
src/: components.rs  config.rs  laplacian.rs  lib.rs  metrics.rs  multi_component.rs  operator.rs  scaling.rs  selection.rs
src/solvers/: dense.rs  lobpcg.rs  mod.rs  operator.rs  rsvd.rs  sinv.rs
tests/: README.md  conftest.py  environment.yml  fixture_utils.py  generate_fixtures.py  npz_loading.rs  test_fixture_constraints.py  test_fixture_utils.py  test_generate_fixtures.py  test_operator.rs  test_pipeline_references.py  verify_fixtures.py
tests/common/: mod.rs
tests/fixtures/: manifest.json
tests/fixtures/blobs_50/: comp_a_degrees.npz  comp_b_laplacian.npz  comp_c_components.npz  comp_d_eigensolver.npz  comp_e_selection.npz  comp_f_scaling.npz  (+13 more)
tests/integration/: test_accuracy_report.rs  test_adversarial_graphs.rs  test_comp_11_rsvd.rs  test_comp_a_degrees.rs  test_comp_b_laplacian.rs  test_comp_c_components.rs  test_comp_d_dense_evd.rs  test_comp_d_rsvd.rs  test_comp_e_selection.rs  test_comp_f_lobpcg.rs  test_comp_g_sinv.rs  test_e2e_validation.rs  test_exp_rsvd_nbiter_sweep.rs  test_exp_rsvd_sweep.rs  test_exp_solver_invariants.rs  test_metrics_assess.rs  test_pipeline.rs  test_rq3_threshold.rs  test_rq4_property_tests.proptest-regressions  test_rq4_property_tests.rs  test_simd_lobpcg_parity.rs  test_simd_parity.rs  test_solver_invariants.rs  test_warm_restart_benefit.rs
tests/visual_eval/: README.md  conftest.py  download_merfish.py  export_merfish_init.rs  export_rust_init.rs  generate_umap_comparisons.py  run_eval.sh  run_merfish_eval.sh  test_generate_umap_comparisons.py  test_phase2.py
(+183 files in other folders)
