[package]
name = "spectral-init"
version = "0.1.0"
edition = "2024"
description = "Spectral initialization for UMAP embeddings"
license = "MIT"

[features]
# Expose internal solver functions for integration tests.
# Not part of the stable public API.
testing = []

[dependencies]
sprs = "0.11"
ndarray = "0.17"
faer = "0.24"
rand = "0.9"
rand_distr = "0.5"
thiserror = "2"
linfa-linalg = "0.2"        # pure-Rust LOBPCG; no LAPACK backend required
log = "0.4"                 # logging facade for library diagnostics
ndarray16 = { package = "ndarray", version = "0.16" }  # linfa-linalg uses ndarray 0.16; alias for bridging

[dev-dependencies]
ndarray-npy = "0.10"
approx = "0.5"
serde_json = "1"
humantime = "2"
criterion = { version = "0.5", features = ["html_reports"] }

[[test]]
name = "test_comp_e_selection"
path = "tests/integration/test_comp_e_selection.rs"

[[test]]
name = "test_comp_a_degrees"
path = "tests/integration/test_comp_a_degrees.rs"

[[test]]
name = "test_comp_b_laplacian"
path = "tests/integration/test_comp_b_laplacian.rs"

[[test]]
name = "test_comp_c_components"
path = "tests/integration/test_comp_c_components.rs"
required-features = ["testing"]

[[test]]
name = "test_comp_d_dense_evd"
path = "tests/integration/test_comp_d_dense_evd.rs"

[[test]]
name = "test_comp_f_lobpcg"
path = "tests/integration/test_comp_f_lobpcg.rs"

[[test]]
name = "test_comp_d_rsvd"
path = "tests/integration/test_comp_d_rsvd.rs"
required-features = ["testing"]

[[test]]
name = "test_pipeline"
path = "tests/integration/test_pipeline.rs"

[[test]]
name = "test_e2e_validation"
path = "tests/integration/test_e2e_validation.rs"

[[test]]
name = "test_adversarial_graphs"
path = "tests/integration/test_adversarial_graphs.rs"
required-features = ["testing"]

[[test]]
name = "test_accuracy_report"
path = "tests/integration/test_accuracy_report.rs"
required-features = ["testing"]

[[test]]
name = "test_comp_g_sinv"
path = "tests/integration/test_comp_g_sinv.rs"
required-features = ["testing"]

[[test]]
name = "test_warm_restart_benefit"
path = "tests/integration/test_warm_restart_benefit.rs"
required-features = ["testing"]

[[test]]
name = "test_rq3_threshold"
path = "tests/integration/test_rq3_threshold.rs"
required-features = ["testing"]

[[test]]
name = "export_rust_init"
path = "tests/visual_eval/export_rust_init.rs"
required-features = ["testing"]

[[bench]]
name = "spectral_bench"
harness = false
required-features = ["testing"]
